--- a/src/model/llm-classification-finetuning.ipynb
+++ b/src/model/llm-classification-finetuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import confusion_matrix, precision_score, recall_score, log_loss\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -345,6 +345,10 @@
     }
    ],
    "source": [
+    "# Handle missing values in text columns\n",
+    "for col in [\"prompt\", \"response_a\", \"response_b\"]:\n",
+    "    training[col] = training[col].fillna(\"\")\n",
+    "\n",
     "# Initialize vectorizers for each text field\n",
     "vectorizer_prompt = TfidfVectorizer(max_features=150)\n",
     "vectorizer_response_a = TfidfVectorizer(max_features=150)\n",
