conclude it failed.

--- a/src/model/llm-classification-finetuning.ipynb
+++ b/src/model/llm-classification-finetuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-26T18:21:03.280932Z",
@@ -33,11 +33,19 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Import Data Complete\n"
+     ]
+    }
+   ],
    "source": [
     "# import the data\n",
-    "training = pd.read_csv('train.csv')\n",
-    "test = pd.read_csv('test.csv')\n",
+    "training = pd.read_csv('../../public/model/train.csv')\n",
+    "test = pd.read_csv('../../public/model/test.csv')\n",
     "\n",
     "training['train_test'] = 1\n",
     "test['train_test'] = 0\n",
