--- a/src/model/llm-classification-finetuning.ipynb
+++ b/src/model/llm-classification-finetuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.metrics import confusion_matrix, precision_score, recall_score, log_loss\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-26T18:31:14.265235Z",
@@ -230,7 +230,10 @@
     "train_y = training[\"winner\"].values\n",
     "\n",
     "# Concatenate feature arrays\n",
-    "train_X = np.hstack([temp_prompt.toarray(), temp_response_a.toarray(), temp_response_b.toarray()])"
+    "train_X = np.hstack([temp_prompt.toarray(), temp_response_a.toarray(), temp_response_b.toarray()])\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "train_X = scaler.fit_transform(train_X)"
    ]
   },
   {
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-26T18:35:22.964053Z",
@@ -379,6 +382,8 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
+    "\n",
+    "model.summary()\n",
     "\n",
     "end = datetime.now()\n",
     "execution_time = (end - start).total_seconds()\n",
